# AppSecuenciadorZephyr

./: .gitmodules  west.yml
app/: CMakeLists.txt
app/src/: main.c
